--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sharp": "^0.29.1",
+    "simple-react-lightbox": "^3.6.9-0",
     "swiper": "^7.0.7"
   },
   "devDependencies": {
